docker_prac/nagp-files/flask-deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "flask-app-deployment"
  labels:
    app: "flask-app"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: "flask-app"
  template:
    metadata:
      labels:
        app: "flask-app"
    spec:
      containers:
      - name: "flask-app-container"
        image: "ketansomani/nagp_flask:latest"
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m" 
        imagePullPolicy: Always
