docker_prac/nagp-files/flask-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - port: 80
      targetPort: 2000
  type: ClusterIP
