docker_prac/nagp-files/flask-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-nordport
spec:
  selector:
    app: flask-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 2000
      nodePort: 32000
  type: NodePort
